cmake_minimum_required(VERSION 3.28.3)
project(Classic_100_Questions C)

set(CMAKE_C_STANDARD 99)
add_executable(Demo_001 Code/Demo_001.c)
add_executable(Demo_002 Code/Demo_002.c)
add_executable(Demo_003 Code/Demo_003.c)
add_executable(Demo_004 Code/Demo_004.c)
add_executable(Demo_005 Code/Demo_005.c)
add_executable(Demo_006 Code/Demo_006.c)
add_executable(Demo_008 Code/Demo_008.c)
add_executable(Demo_011 Code/Demo_011.c)
add_executable(Demo_012 Code/Demo_012.c)
add_executable(Demo_015 Code/Demo_015.c)
add_executable(Demo_016 Code/Demo_016.c)
